ocp_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: appcursomc
  namespace: myprojectcursomc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appcursomc
      tier: backend
  template:
    metadata:
      labels:
        app: appcursomc
        tier: backend
    spec:
      containers:
        - name: appcursomc
          image: 'marcosseibert2389/appcursomc:latest'
          imagePullPolicy: IfNotPresent
          ports:
            - name: tcp
              containerPort: 8085
              protocol: TCP
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 125m
              memory: 256Mi
---
kind: Service
apiVersion: v1
metadata:
  name: appcursomc
  namespace: myprojectcursomc
spec:
  ports:
    - name: appcursomc
      protocol: TCP
      port: 9999
      targetPort: 8085
  selector:
    app: appcursomc
  type: ClusterIP
