ocp_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: appcursomc
  namespace: myprojectcursomc
spec:
  path: /
  tls:
    termination: edge
  to:
    kind: Service
    name: appcursomc
    weight: 100
  wildcardPolicy: None
